# Pankki

./: .gitignore  README.md
.github/workflows/: .gitkeep  azure-deploy.yml
backend/: .env.example  DEVELOPMENT.md  README.md  package-lock.json  package.json  server.js
backend/prisma/: .gitkeep  schema.prisma
backend/prisma/migrations/20251218205234_init_customers/: migration.sql
backend/public/: .gitkeep
backend/src/config/: .gitkeep  database.js  swagger.js
backend/src/controllers/: .gitkeep  customerController.js
backend/src/middleware/: .gitkeep  cors.js  errorHandler.js  rateLimiter.js
backend/src/routes/: .gitkeep  customerRoutes.js
backend/src/services/: .gitkeep  customerService.js
backend/src/utils/: .gitkeep
backend/swagger/: .gitkeep
backend/tests/: .gitkeep  customer.http  health.test.js
documents/: .gitkeep
frontend/: CMakeLists.txt  CMakePresets.json  README.md  apiclient.cpp  apiclient.h  customer.cpp  customer.h  main.cpp  mainwindow.cpp  mainwindow.h
